--- a/front-end/src/components/pages/Style.css
+++ b/front-end/src/components/pages/Style.css
@@ -30,7 +30,7 @@ select[name="esrbRating"] {
 #console th,
 #tShirt th {
   border: 1px solid;
-  padding: 10px;
+  padding: 5px;
 }
 
 #deleteButton {
@@ -43,6 +43,6 @@ label {
   margin-right: 20px;
 }
 
-#saveButton {
-  margin: 0 10px 0 25px;
+.btn {
+  margin: 0 10px 0 10px;
 }
