--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --colorbor: rgb(251, 255, 0);
+  --colorbor: #ffff50;
   --colormain: #1fd07a;
   --colorbody: #17d97e;
   margin: 0 auto;
